# LearnParallel

./: CMakeLists.txt  CopyToAll.sh  Dockerfile  Hello.cu  MultiplicationOpenMP.c  MultiplicationSeq.c  a.txt  aa.txt  cuda2.cu  cuda3.cu  cuda3withThrust.cu  cudacode.cu  cudaplus.cu  cudastringtest.cu  cudathrustwordcount.cpp  cudathrustwordcount.cu  hello  hf  jacobi1.c  main.c  main.cpp  q.txt  qq.txt  testReadFile.c
test/: stringcompare.c
